modules/networking/security_groups.tf
resource "aws_security_group" "web" {
    name_prefix = "web-sg"
    vpc_id = aws_vpc.main.id


ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80    
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}

ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22   
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
}

egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}

tags = {
    Name = "web-sg"
  }
}
